syntax = "proto3";

package PClient;

import "common.proto";

// ***********************************  Stuct Start ***********************************
// ***********************************  Stuct End ***********************************






// ***********************************  MSG Start ***********************************



//----------------------------- common ---------------------

//错误码 2000
message S2C_ErrorCode
{
    int32 errcode = 1;
}

//MSG_CL2GT_SOCKETHIT         1999     //客户端心跳包
message C2S_SocketHit
{

}

//MSG_GT2CL_SOCKETHIT         2999     //客户端心跳包
message S2C_SocketHit
{
    int32 curtime = 1; //时间戳
}

//准备关闭服务器
message S2C_ShutDwon
{
    int32 leftsec = 1; //倒计时秒
}

//你的帐号在另外设备登录，被踢下线
message S2C_ReloginKick
{

}

//玩家在线状态设置home键
message C2S_PhoneHomeOnline
{
    bool isOnline = 1;//是否在线
}

//玩家在线状态设置home键
message S2C_PhoneHomeOnline
{
    int32 userId = 1;
    bool isOnline = 2;//是否在线
}


//----------------------------- login ---------------------

//MSG_CL2LN_LOGINACCOUNT          = 1011,     //账号登陆
message C2S_Login
{
    string openid = 1;//微信openid
    string unionid = 2;//微信unionid
    string name= 3;//用户名字
    string psw = 4;//用户密码
    string version = 5; //版本号
    string imageUrl = 6;//用户头像Url
    int32 sex = 7;//性别 1-男 2-女
}

//MSG_LN2CL_GATEIPANDPORT         = 2011,     //成功登陆返回gate链接信息
message S2C_Login
{
    int32 accdbid = 1;//帐号dbid
    string sign = 2;//签名
    string serverIp=3;//服务器地址
    int32 port=4;//服务器端口
    int32 time=5;//登录时间戳
}

//MSG_CL2GT_LOGINGATE             = 1012,     //连接gate验证签名
message C2S_GetUserInfo
{
    string openid = 1;//用户唯一标识。手机mac地址
    string name= 2;//用户名字
    int32 accdbid = 3;//账号dbid
    string sign= 4;//签名
    int32 time= 5;//登录时间戳
    string version = 6; //版本号
}

//MSG_WD2CL_BACKROLEINITDATA      = 2012,     //返回角色基本数据
message S2C_GetUserInfo
{
    string userName = 1;//用户名字
    int32 userId = 2;//账号id
    int32 roleId = 3;//玩家id
    string ip=4;//ip地址
    string headIcon = 5;//头像Url
    int32 sex = 6;//性别 1-男 2-女
    int32 registerTime = 7;//注册时间
    float locationX = 8;//经度
    float locationY = 9;//纬度
    string phoneNumber = 10;//手机码 
    bool firstLogin = 11;
}

//MSG_CL2LG_GETITEMLIST           = 1511,     //请求物品列表
message C2S_GetItemList
{
    int32 type = 1;//物品栏类型
}

//MSG_LG2CL_BACKITEMLIST          = 2511,     //返回物品列表
message S2C_BackItemList
{
    int32 type = 1;//物品栏类型
    repeated PBase.PB_Item itemList = 2;//物品列表
}


//MSG_CL2LG_GETEQUIPLIST          = 1512,     //请求装备列表
message C2S_GetEquipList
{
    
}

//MSG_LG2CL_BACKEQUIPLIST         = 2512,     //返回装备列表	
message S2C_BackEquipList
{
    repeated PBase.PB_Item equipList = 1;//物品列表
}



//MSG_CL2LG_GETTASKLIST           = 1521,     //请求任务列表
message C2S_GetTaskList
{
    int32 type = 1;//任务类型
}

//MSG_LG2CL_BACKTASLLIST          = 2521,     //返回任务列表
message S2C_BackTaskList
{
    int32 type = 1;//任务类型
    repeated PBase.PB_Task taskList = 2;//物品列表
}


// MSG_CL2LG_GETCOUNTERLIST        = 1531,     //请求计数器列表
message C2S_GetCounterList
{

}

// MSG_LG2CL_BACKCOUNTERLIST       = 2531,     //返回计数器列表
message S2C_BackCounterList
{
    repeated PBase.PB_Counter counterList = 1;
}

// MSG_CL2LG_CREATEEQUIP           = 1541,     //打造装备
message C2S_CreateEquip
{
    int32 id = 1;    //物品ID
}

// MSG_LG2CL_BACKEQUIP             = 2541,     //返回新装备
message S2C_BackEquip
{
    int32 result = 1;           //打造结果(0:成功,非0:失败)
    int32 equipId = 2;          //新装备的ID
}

// MSG_CL2LG_SMELTGOODS            = 1551,     //炼制丹药
message C2S_SmeltGoods
{
    int32 id = 1;  //物品id
}

// MSG_LG2CL_BACKEGOODS            = 2551,     //返回丹药
message S2C_BackGoods
{
    int32 result = 1;           //炼制结果(0:成功,非0:失败)
    map<int32,int32> goodsList = 2;    //物品的信息列表(key:丹药的ID, value:丹药的数量)
}

// MSG_CL2LG_MODIFYENTRIES         = 1561,     //洗炼词条
message C2S_ModifyEntries
{

}

// MSG_LG2CL_BACKENTRIES           = 2561,     //返回词条
message S2C_BackEntries
{

}

// MSG_CL2LG_EXCHANGEITEM          = 1571,     //交换物品位置
message C2S_ExchangeItem
{

}

// MSG_CL2LG_SORTBAG               = 1581,     //整理背包
message C2S_SortBag
{
    int32 type = 1;     //物品类型(装备、符咒、丹药......)
}

// MSG_CL2LG_SELLITEMS             = 1522,     //出售物品
message C2S_SellItems
{
    map<string,int32> itemMap = 1;    //物品的信息列表(key:item的guid,  value:item的数量)
}

// MSG_LG2CL_BACKSELLRESULT        = 2522,     //返回出售结果
message S2C_BackSellResult
{
    int32 result = 1;
}

// MSG_CL2LG_GETPLAYEREQUIP        = 1542,     //请求穿戴部位的装备
message C2S_GetPlayerEquip
{
    int32 type = 1;
    int32 subType = 2;
}

// MSG_LG2CL_BACKPLAYEREQUIP       = 2542,     //返回指定部位的装备
message S2C_BackPlayerEquip
{
    repeated PBase.PB_Item equipList = 1;
}

// MSG_CL2LG_PLAYEREQUIPOPERATE    = 1552,     //穿戴或卸下装备
message C2S_PlayerEquipOperate
{
    int32 opreateType = 1;     //操作类型 1:穿戴  2:卸下
    string equipGuid = 2;      //装备的guid
}

// union

// MSG_CL2WD_CREATEUNION          	= 1601,     //请求创建工会
message C2S_CreateUnion
{
    string unionName = 1;
    string unionNotice = 2;
}

// MSG_WD2CL_CREATEUNION          	= 2601,     //返回创建工会
message S2C_CreateUnion
{
    int32 ret = 1;
    string unionName = 2;
    int32 unionDbid = 3;    
    int32 level = 5;
    int32 money = 6;
    int32 exp = 7;
    int32 createTime = 8;
    string notice = 9;     
}


// MSG_CL2WD_APPLYJOINUNION        = 1602,     //请求加入工会
message C2S_ApplyJoinUnion
{
    string unionName = 1;
}

// MSG_WD2CL_APPLYJOINUNION        = 2602,     //返回加入工会(返回给申请者)
message S2C_ApplyJoinUnion
{    
    int32 ret = 1;
    string unionName = 2;
}

// MSG_CL2WD_GETUNIONLIST     		= 1603,     //请求工会列表
message C2S_GetUnionList
{
   
}

// MSG_WD2CL_GETUNIONLIST     		= 2603,     //请求工会列表
message S2C_GetUnionList
{
    repeated PBase.PB_UnionObj unionList = 1;
}

//MSG_CL2WD_GETUNIONAPPLYLIST     = 1604,     //请求申请列表
message C2S_GetUnionApplyList
{
    
}

//MSG_WD2CL_GETUNIONAPPLYLIST     = 2604,     //请求申请列表
message S2C_GetUnionApplyList
{
    int32 unionDbid = 1;
    repeated PBase.PB_UnionApplyInfo applyList = 2;
}

// MSG_CL2WD_UNIONAPPLYREPLY     	= 1605,     //同意或拒绝申请
message C2S_UnionApplyReply
{
    int32 applyDbid = 1;  //申请者的id
    int32 applyReply = 2;  //1同意 2拒绝
}

// MSG_WD2CL_UNIONAPPLYREPLY     	= 2605,     //同意或拒绝申请(返回给管理者)
message S2C_UnionApplyReply
{
    int32 applyDbid = 1;  //申请者的id
    int32 applyReply = 2;  //1同意 2拒绝
}

// MSG_CL2WD_GETUNIONINFO     		= 1608,     //请求工会信息
message C2S_GetUnionInfo
{
    
}

// MSG_WD2CL_GETUNIONINFO     		= 2608,     //返回工会信息
message S2C_GetUnionInfo
{
    PBase.PB_UnionObj unionInfo = 1;
    repeated PBase.PB_UnionMember memberList = 2;
}


// MSG_CL2WD_CANCELAPPLYUNION     	= 1609,     //取消申请公会
message C2S_CancelApplyUnion
{
    string unionName = 1;
}

// MSG_WD2CL_CANCELAPPLYUNION     	= 2609,     //取消申请公会	
message S2C_CancelApplyUnion
{
    string unionName = 1;
}

// MSG_CL2WD_EXITUNION     		= 1610,     //退出公会
message C2S_ExitUnion
{
    
}
// MSG_WD2CL_EXITUNION     		= 2610,     //退出公会	
message S2C_ExitUnion
{
    int32 result = 1;  //退出结果(1:成员、非宗主职位正常退出 2:解散 3:不能退出)
    string unionName = 2;
}

// MSG_CL2WD_APPOINT               = 1611,     //任命职位
message C2S_Appoint
{
    int32 type = 1;  //类型(1:任命职位  2:解除职位)
    int32 palyerid = 2;  //被任命的玩家id
    int32 post = 3;  //被任命的职位
}

// MSG_WD2CL_RESULTTOMANAGER       = 2611,     //返回任命结果(返回给管理者)
message S2C_ResultToManager
{
    int32 result = 1;  //任命结果(0:失败 1:成功)
    int32 post = 2;  //被任命者的职位
}

// MSG_WD2CL_RESULTTOMEMBER        = 2612,     //返回任命结果(返回给被任命者)
message S2C_ResultToMember
{
    int32 post = 1;  //被任命的职位
}

// MSG_CL2WD_UPGRADEUNIONLEVEL     = 1613,     //升级公会
message C2S_UpgradeUnionLevel
{
    int32 unionId = 1;  //工会id
}

// MSG_WD2CL_BACKUPGRADERESULT     = 2613,     //返回升级结果
message S2C_BackUpgradeResult
{
    int32 result = 1;       //结果(0:失败  1:成功)
    int32 unionId = 2;      //工会id
    string unionName = 3;   //工会名称
}

// MSG_CL2WD_MODIFYNOTICE          = 1614,     //修改工会公告信息
message C2S_ModifyNotice
{
    int32 unionId = 1;  //工会id
    string noticeText = 2;  //公告信息文本
}

// MSG_WD2CL_BACKMODIFYNOTICE      = 2614,     //返回公告修改结果
message S2C_BackModifyNotice
{
    int32 result = 1;   //结果(0:失败  1:成功)
    string text = 2;    //描述文本(成功时:text为修改后的公告信息  失败时:text为错误信息)
}

// MSG_CL2WD_DONATEITEMS           = 1615,     //工会捐赠物资
message C2S_DonateItem
{
    int32 itemId = 1;       //捐赠物品的id
}

// MSG_WD2CL_BACKDONATERESULT      = 2615,     //返回捐赠结果
message S2C_BackDonateResult
{
    int32 itemId = 1;           //消耗物品的名称
    int32 usedNum = 2;          //物品使用数量
    int32 unionEXP = 3;         //工会增加经验
    int32 contribution = 4;     //个人获得贡献值
}

//MSG_CL2WD_GETUNIONLOGS          = 1616,     //请求工会日志
message C2S_GetUnionLogs
{
    int32 unionId = 1;  //工会id
}

//MSG_WD2CL_BACKUNIONLOGS         = 2616,     //返回工会日志
message S2C_BackUnionLogs
{
    int32 unionId = 1;  //工会id
    repeated PBase.PB_UnionLogInfo  unionLogs = 2;  //工会日志信息
}

/*人物属性系统*/
//MSG_CL2LG_GETPLAYERPROPERTY     = 1701,     //请求玩家属性
message C2S_GetPlayerProperty
{

}

//MSG_LG2CL_BACKPLAYERPROPERTY    = 2701,     //返回玩家属性
message S2C_BackPlayerProperty
{
    //人物基础属性
    string playerName = 1;  //角色名
    string serverName = 2;  //所属服务器名
    int32 bodyLevel = 3;  //肉身等级
    int32 practiceLevel = 4;  //境界等级
    int32 trainTime = 5;  //修炼时长
    int32 practiceType = 6;  //当前修行类型
    int64 currentBodyEXP = 7;  //当前肉身经验值
    int64 currentPracticeEXP = 8;  //当前境界修为值
    string unionName = 9;  //所属公会名称
    int32 unionPost = 10;  //工会职务
    int32 unionContribution = 11;  //工会贡献值
    map<int32,int64> fightAttributeList = 12;  //战斗属性
    repeated PBase.PB_FiveAttribute fiveAttributeList = 13;  //五行属性
    repeated PBase.PB_Money moneyList = 14;  //货币属性
}

//MSG_CL2LG_BREAKLEVEL            = 1702,     //突破修为
message C2S_BreakLevel
{
    int32 type = 1;  //突破类型(1:修体突破  2:修法突破)
}

//MSG_LG2CL_BACKBREAKRESULT       = 2702，    //返回突破结果
message S2C_BackBreakResult
{
    int32 result = 1;  //结果(0:失败 1:成功)
    int64 practiceEXP = 2;  //当前境界修为值
}

//MSG_CL2LG_PRACTICE              = 1703,     //修行操作
message C2S_PracticeOperate
{
    int32 type = 1;  //请求类型(1:进入修行界面 0:退出修行界面)
}

//MSG_LG2CL_BACKPRACTICEEXP       = 2703,     //返回当前修为值
message S2C_BackPracticeEXP
{
    int32 practiceType = 1;  //当前修行类型(0:无效值,不做处理 1:修体  2:修法)
    int64 practiceEXP = 2;  //当前修为值
}

//MSG_CL2LG_CHANGEPRACTICETYPE    = 1704,     //改变修行类型
message C2S_ChangePracticeType
{
    int32 type = 1;  //修行类型(1:修体  2:修法)
}



//////////////////////

// MSG_CL2LG_STARTBATTLESINGLE    	= 1901,     //开始战斗单人
message C2S_StartBattleSingle
{
    int32 regionId = 1;  
    int32 mapId = 2;   
}

// MSG_LG2LC_STARTBATTLESINGLE    	= 2901,     //开始战斗单人	

message S2C_StartBattleSingle
{
    int32 regionId = 1; 
    int32 curTurnIndex = 2; 
    repeated PBase.PB_BattleObj playerList = 8;
    repeated PBase.PB_BattleTurn turnList = 9;
}

// MSG_CL2LG_BATTLEATTCK    		= 1902,     //攻击
message C2S_BattleAttack
{
    int32 skillId = 1;  //技能id    
    int32 attackId = 2; 
    int32 defenseId = 3;  //被攻击id
    int32 posx = 4;
    int32 posy = 5;
}

// MSG_LG2LC_BATTLEATTCK    		= 2902,     //攻击	
message S2C_BattleAttack
{
    int32 skillId = 1;
    int32 attackId = 2; 
    int32 defenseId = 3; 
    int32 posx = 4; 
    int32 posy = 5;
    int32 damage = 6;
    int32 hp = 7;
}

// MSG_LG2LC_BATTLENEXTTURN    	= 2903,     //下一波信息
message S2C_BattleNextTurn
{
    int32 curTurnIndex = 1; 
}


// MSG_LG2LC_BATTLEGAMEOVER    	= 2905,     //战斗结束
message S2C_BattleGameOver
{

}

/////////////////////////////////////////////////



//更新玩家货币信息
message S2C_UpdateUserMoney
{
    repeated PBase.PB_Money money = 1;//房卡数量
}

//上传用户信息()
message C2S_UploadUserInfo
{
    string imageUrl = 4;//用户头像Url
    int32 sex = 5;//性别 0-女 1-男
}

//完成登录过程（）
message S2C_FinishLogin
{

}

//地理位置信息上传()
message C2S_UploadLocation
{
    float locationX = 1;//经度
    float locationY = 2;//纬度
    string describe = 3;//描述
}


//退出房间
message C2S_ExitRoom
{

}

//退出房间 广播
message S2C_ExitRoom
{
    int32 userId=1;//哪一个玩家退出了房间
    int32 exittype=2; //退出方式  1为正常 2金币场扣钱退出 3金币场没准备
}


//-----------------------------  HALL ---------------------------------


//发送文字聊天
message C2S_SendChat
{
    string content = 1;//聊天消息内容
}

//
message S2C_PushSendChat
{
    int32 userId = 1;//发送方id
    string content = 2;//收到的聊天消息内容
}

//发送语音
message C2S_SendVoice
{
    bytes content = 1;//语音消息内容
    int32 flag = 2;//当前状态 0空闲  1接收数据中  2接收数据完成
}

//发送语音
message S2C_PushVoice
{
    int32 userId = 1; //发送方id
    bytes content = 2; //收到的语音消息内容
    int32 flag = 3; //当前状态 0空闲  1接收数据中  2接收数据完成
}

//做测试牌型
message C2S_CheatCard
{
    string cheatCards1 = 1;//测试牌1
    string cheatCards2 = 2;//测试牌2
}

//大厅查询玩家信息
message C2S_GetHallUserInfo
{
    int32 gameId = 1;//游戏id
    int32 userId = 2;//用户ID
}

//公告
message C2S_NoticeInfo
{

}

//
message S2C_NoticeInfo
{
    string noticecontent=1;    //公告内容
    int32 starttime=2;         //开始时间
    int32 endtime=3;           //结束时间
}


//绑定手机
message C2S_BindPhone
{
    string phoneNumber = 1;//手机号
}

//绑定手机
message S2C_BindPhone
{
    string phoneNumber = 1;//手机号
}

//绑定邀请码
message C2S_BindInviteCode
{
    int32 inviteCode = 1;//邀请码
}

//绑定邀请码
message S2C_BindInviteCode
{
    string inviteName = 1;//邀请人名字
    int32 inviteCode = 2;//邀请码
    int32 inviteUserId = 3;//邀请码对应的用户id
}






